--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@vonojs/vono": "0.0.13",
+    "hono": "^3.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
